--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,13 @@
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
+		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
+			<script
+ 				 src="https://code.jquery.com/jquery-3.6.0.js"
+  				integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  				crossorigin="anonymous">
+			</script>
+  		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
